# fido

./: .gitignore  MANIFEST.in  README.md  setup.py
debian/: changelog  control  copyright  fido.1  fido.manpages
fido/core/: __init__.py  loader.py  log.py  template.py
fido/templates/: android-make-c.py  android-make-cpp.py  android_make_c.py  android_make_cpp.py  android_ndk_build_c.py  cmake-c.py  cmake-cpp.py  cmake_c.py  cmake_cpp.py  make_c.py  make_cpp.py  make_go.py  makecpp.py
fido/templates/data/android-make-c/: .fido  Makefile
fido/templates/data/android-make-cpp/: .fido  Makefile
fido/templates/data/android-make-cpp/src/: main.cpp
fido/templates/data/android-ndk-build-c/: Android.mk
fido/templates/data/android-ndk-build-c/src/: main.c
fido/templates/data/cmake-c/: .gitignore  CMakeLists.txt
fido/templates/data/cmake-cpp/: CMakeLists.txt
fido/templates/data/make-c/: .fido  Makefile
fido/templates/data/make-c/src/: main.c
fido/templates/data/make-cpp/: .fido  .gitignore  Makefile
fido/templates/data/make-go/: Makefile  README.md  main.go
